force-app/main/default/objects/User_Response__c/User_Response__c.object-meta.xml
<CustomObject>
    <label>User Response</label>
    <nameField>
        <label>User Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>