force-app/main/default/objects/User_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>User Responses</relationshipLabel>
    <relationshipName>User_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>