force-app/main/default/objects/User_Response__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>